syntax = "proto3";
package sign;


service Sign {
    rpc verify(LoginReq) returns (LoginResp) {};
    rpc register(SignUpReq) returns (SignUpResp) {};
}

message LoginReq {
    string username = 1;
    string password = 2;
}

message LoginResp {
    bool result = 1;
}

message SignUpReq {
    string username = 1;
    string password = 2;
    string email = 3;
}

message SignUpResp {
    bool result = 1;
}